# Ray-Tracing-Micro-Meshes

./: CMakeLists.txt  LICENSE  README.md
framework/: CMakeLists.txt
framework/include/framework/: CreateBuffer.h  GPUState.h  MeshIterator.h  TinyGLTFLoader.h  TransformationChannel.h  VertexHash.h  mesh.h  shader.h  window.h
framework/src/: GPUState.cpp  MeshIterator.cpp  TinyGLTFLoader.cpp  mesh.cpp  shader.cpp  trackball.cpp  window.cpp
resources/: cilinder.glb  cilinder.gltf
shaders/: closesthit.hlsl  closesthitTriangle.hlsl  createAABBs.hlsl  intersection.hlsl  mesh_edges.frag  mesh_edges.vert  miss.hlsl  raygen.hlsl  shader_frag.glsl  shader_vert.glsl  shadow_frag.glsl  shadow_vert.glsl  skinning.frag  skinning.hlsl  skinning.vert  skinningPS.hlsl  skinningVS.hlsl
src/: GPUMesh.cpp  GPUMesh.h  Plane.h  Triangle2D.h  TriangleData.h  WireframeDraw.cpp  WireframeDraw.h  application.cpp  mesh.cpp  mesh.h
src/dx_util/: Buffer.h  CMakeLists.txt  CommandListWrapper.cpp  CommandListWrapper.h  CommandSender.cpp  CommandSender.h  ComputeShader.cpp  ComputeShader.h  DefaultBuffer.h  GPUState.cpp  GPUState.h  RasterizationShader.cpp  RasterizationShader.h  RayTraceShader.cpp  RayTraceShader.h  ReadbackBuffer.h  UploadBuffer.h  shader.cpp  shader.h
